# music-agent

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  setup.py
docs/: index.html  styles.css
musicctl/: __init__.py  cli.py  formatter.py
musicd/: __init__.py  daemon.py  hotlist_kkbox.py  ipc.py  player_mpv.py  resolver.py  source_base.py  source_bilibili.py  source_soundcloud.py  source_youtube.py  state.py
scripts/: apply_statebar.py  install_hermes_skill.sh
shared/: __init__.py  environment.py  errors.py  lang.py  models.py  runtime.py  source.py  statebar_patch.py  utils.py  ytmusic_artist.py
skills/hermes/music/: SKILL.md
skills/openclaw/music/: SKILL.md
tests/: test_cli.py  test_formatter.py  test_hotlist_kkbox.py  test_lang.py  test_models.py  test_resolver.py  test_source.py  test_source_bilibili.py  test_source_youtube.py  test_statebar_patch.py
