[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "music-agent"
version = "0.1.0"
description = "Local background music agent for Hermes/OpenClaw."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Codex" }
]
dependencies = []

[project.scripts]
musicctl = "musicctl.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["musicctl*", "musicd*", "shared*"]

